# seasync

./: .gitignore  LICENSE  README.md  add_copyright.py  build_package.py  demo.py  demo_real_data.py  launch_gui.py  main.py  pyproject.toml
config/templates/: ais_default.json  csv_default.json  gps_default.json  ipix_radar.yaml  matlab_radar_data.yaml  matlab_wave_data.yaml  navy_radar_dat.yaml  nmea_default.json  radar_default.json
seasync/: __init__.py  __main__.py  cli.py  end_to_end_real_data_test.py
seasync/adapters/: __init__.py  ais_adapter.py  base_adapter.py  cat048_adapter.py  csv_adapter.py  dat_adapter.py  gps_adapter.py  import_manager.py  mat_adapter.py  radar_adapter.py  txt_track_adapter.py  xlsx_adapter.py
seasync/core/: __init__.py  association_config.py  config_manager.py  data_models.py  device_manager.py  format_detector.py  geo.py  kml_export.py  logger.py  project_manager.py  standard_columns.py
seasync/engines/: __init__.py  association_engine.py  clustering_engine.py  event_detector.py  pipeline.py  scan_tracker.py  time_aligner.py  track_manager.py
seasync/gui/: __init__.py  config_widget.py  main_window.py  mpl_canvas.py  themes.py  worker_thread.py
seasync/report/: __init__.py  report_generator.py
seasync/visualization/: __init__.py  draw_command.py  visualization.py
tests/: conftest.py  test_dat_adapter.py  test_fixes.py  test_gui_automated.py  test_helpers.py  test_integration_e2e.py  test_mat_adapter.py
tests/scenarios/: __init__.py  test_integration.py  test_visualization.py
tests/unit/: test_config_manager.py  (+3 more)
