[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seasync"
version = "2.2.0"
description = "SeaSync V2.2 — 多源目标关联分析系统 / Maritime Multi-Source Data Association"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
gui = ["PyQt5"]
report = ["python-docx"]
all = ["PyQt5", "python-docx", "scipy"]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/seasync/v2.2"

[project.scripts]
seasync = "seasync.cli:main"

[tool.setuptools.packages.find]
include = ["seasync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
